# valkyrie_model_arm_firmware

./: Cargo.toml  Embed.toml  openocd.gdb  upload.sh
.cargo/: config
src/: main.rs  protocol.rs  scale.rs
